--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Asgm_kot104"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.asm_thanghtph31577.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Asgm_kot104">
